--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
 
         <section class="about-text">
           <p>
-            Window Film technician dengan pengalaman kerja lebih dari satu tahun. Seorang problem solver kreatif dengan kemampuan interpersonal yang kuat. Berhasil menyelesaikan jobdesk dengan waktu yg efisien. Mencari posisi sebagai window film technician untuk melanjutkan pertumbuhan skill dan karir di bidang car specialist
+            Teknisi Kaca Film dengan pengalaman kerja lebih dari satu tahun. Seorang problem solver kreatif dengan kemampuan interpersonal yang kuat. Berhasil menyelesaikan jobdesk dengan waktu yg efisien. Mencari posisi sebagai window film technician untuk melanjutkan pertumbuhan skill dan karir di bidang car specialist
           </p>
 
           <p>
-            Pekerjaan utama saya adalah sebagai window film technician, disamping itu saya juga memiliki skill dalam design grafis, dan juga saya memiliki bakat dalam dunia fotografi.
+            Pekerjaan utama saya adalah sebagai teknisi kaca film, disamping itu saya juga memiliki skill dalam design grafis, dan juga saya memiliki bakat dalam dunia fotografi.
             Saya terbiasa membuat beberapa logo design simple seperti vector, dan juga dalam bidang fotografi, saya juga memiliki skill editing pada foto seperti coloring, object adjustment, dan pengambilan angle sebuah foto.
           </p>
         </section>
@@ -413,12 +413,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Teknisi Window Film</h4>
+              <h4 class="h4 timeline-item-title">Teknisi Kaca Film</h4>
 
-              <span>Januari 2024 — Sekarang</span>
+              <span>Januari 2024 — April 2025</span>
 
               <p class="timeline-text">
-                Memiliki posisi sebagai teknisi window film dengan jobdesk:
+                Memiliki posisi sebagai teknisi kaca film dengan jobdesk:
               </p>
               <p class="timeline-text">
                 - Melakukan penggantian dan pemasangan kaca film pada kendaraan mobil.
