--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Nandana Purwa Luthfi">Nandana Purwa Luthfi</h1>
 
-          <p class="title">Technician</p>
+          <p class="title">Freelancer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
