--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/nndaprwlf" class="social-link">
+            <a href="https://www.facebook.com/nndprlf" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
@@ -206,12 +206,12 @@
 
         <section class="about-text">
           <p>
-            Teknisi Kaca Film dengan pengalaman kerja lebih dari satu tahun. Seorang problem solver kreatif dengan kemampuan interpersonal yang kuat. Berhasil menyelesaikan jobdesk dengan waktu yg efisien. Mencari posisi sebagai window film technician untuk melanjutkan pertumbuhan skill dan karir di bidang car specialist
+            Lulusan Teknik Kendaraan Ringan Otomotif di SMK Pancasila 1 Kutoarjo. Seorang problem solver kreatif dengan kemampuan interpersonal yang kuat. Berhasil menyelesaikan berbagai jobdesk dengan waktu yg efisien. Sangat termotivasi untuk terus mengembangkan skil dan memiliki kemampuan manajemen waktu yang baik.
           </p>
 
           <p>
-            Pekerjaan utama saya adalah sebagai teknisi kaca film, disamping itu saya juga memiliki skill dalam design grafis, dan juga saya memiliki bakat dalam dunia fotografi.
-            Saya terbiasa membuat beberapa logo design simple seperti vector, dan juga dalam bidang fotografi, saya juga memiliki skill editing pada foto seperti coloring, object adjustment, dan pengambilan angle sebuah foto.
+            Saya adalah seorang freelancer dan memiliki hobi dalam design grafis dan fotografi.
+            Saya terbiasa membuat beberapa logo design simple seperti vector, dan juga dalam bidang fotografi, saya juga memiliki skill editing pada foto seperti coloring, object adjustment, dan teknik pengambilan angle dalam sebuah foto.
           </p>
         </section>
 
